Fix overflow of tabs on AddTagModal (mobile)

--- a/src/less/blocks/add_tag_modal.less
+++ b/src/less/blocks/add_tag_modal.less
@@ -68,6 +68,11 @@
     &-active {
       color: white;
     }
+
+    @media (max-width: 413px) {
+      font-size: 12px;
+      padding: 0.5em 1em;
+    }
   }
 
   &__tab_panel {
